--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -12,25 +12,14 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>이력서 A</div>
+					<div>'<b>홍길동</b>' 님의 이력서입니다.</div>
 				</div>
-				<div class="">
-					<button type="button" class="btn btn-warning">이력서 보기</button>
-					<button type="button" class="btn btn-success">연락</button>
-					<button type="button" class="btn btn-danger">삭제</button>
-				</div>
-			</div>
-
-
-			
-			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<div class="">
-					<div>이력서 B</div>
-				</div>
-				<div class="">
-					<button type="button" class="btn btn-warning">이력서 보기</button>
-					<button type="button" class="btn btn-success">연락</button>
-					<button type="button" class="btn btn-danger">삭제</button>
+				<div class="d-flex flex-column">
+					<form action="" method="post">
+						<input class="btn btn-success btn-sm w-100 mb-1" type="submit" value="연락하기">
+					</form>
+					<a href="" class="btn btn-primary btn-sm mb-1">이력서 보기</a>
+					<a href="" class="btn btn-danger btn-sm">삭제하기</a>
 				</div>
 			</div>
 
@@ -38,12 +27,30 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>이력서 C</div>
+					<div>'<b>홍길동</b>' 님의 이력서입니다.</div>
 				</div>
+				<div class="d-flex flex-column">
+					<form action="" method="post">
+						<input class="btn btn-success btn-sm w-100 mb-1" type="submit" value="연락하기">
+					</form>
+					<a href="" class="btn btn-primary btn-sm mb-1">이력서 보기</a>
+					<a href="" class="btn btn-danger btn-sm">삭제하기</a>
+				</div>
+			</div>
+
+
+			
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<button type="button" class="btn btn-warning">이력서 보기</button>
-					<button type="button" class="btn btn-success">연락</button>
-					<button type="button" class="btn btn-danger">삭제</button>
+					<div>'<b>홍길동</b>' 님의 이력서입니다.</div>
+				</div>
+
+				<div class="d-flex flex-column">
+					<form action="" method="post">
+						<input class="btn btn-success btn-sm w-100 mb-1" type="submit" value="연락하기">
+					</form>
+					<a href="" class="btn btn-primary btn-sm mb-1">이력서 보기</a>
+					<a href="" class="btn btn-danger btn-sm">삭제하기</a>
 				</div>
 			</div>
 
@@ -52,12 +59,14 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>이력서 D</div>
+					<div>'<b>홍길동</b>' 님의 이력서입니다.</div>
 				</div>
-				<div class="">
-					<button type="button" class="btn btn-warning">이력서 보기</button>
-					<button type="button" class="btn btn-success">연락</button>
-					<button type="button" class="btn btn-danger">삭제</button>
+				<div class="d-flex flex-column">
+					<form action="" method="post">
+						<input class="btn btn-success btn-sm w-100 mb-1" type="submit" value="연락하기">
+					</form>
+					<a href="" class="btn btn-primary btn-sm mb-1">이력서 보기</a>
+					<a href="" class="btn btn-danger btn-sm">삭제하기</a>
 				</div>
 			</div>
 
