--- a/src/main/resources/templates/comp/saveForm.mustache
+++ b/src/main/resources/templates/comp/saveForm.mustache
@@ -4,6 +4,10 @@
 <!-- 20번 -->
 
 
+
+<!-- 값 안적거나 안고르면 오류뜸 -->
+
+
 		
 		<form action="/comp/posting/save" method="post" onsubmit="" class="col-8 container" id="selectform">
 			<h1 class="text-center mt-2">공고 등록</h1>
