--- a/src/main/resources/templates/comp/updateForm.mustache
+++ b/src/main/resources/templates/comp/updateForm.mustache
@@ -324,8 +324,7 @@
 
 
 			<div class="d-flex">
-				<input id="button" class="w-50 mb-3 me-2 btn btn-success" type="submit" value="수정하기" onclick="">
-				<button type="button" class="w-50 mb-3 ms-2 btn btn-danger">삭제하기</button>
+				<input id="button" class="w-100 mb-3 btn btn-success" type="submit" value="수정하기" onclick="">
 			</div>
 
 		</form>
