--- a/src/main/resources/templates/comp/joinForm.mustache
+++ b/src/main/resources/templates/comp/joinForm.mustache
@@ -10,7 +10,7 @@
 
 		<div class="mt-3"></div>
 
-		<form action="/comp/join" method="post" onsubmit="">
+		<form action="/comp/join" method="post" onsubmit="" enctype="multipart/form-data">
 			<div class="d-flex form-group mt-2 mb-2">
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email">
 				<button type="button" class="badge bg-secondary ms-2" onclick="">중복체크</button>
@@ -42,6 +42,14 @@
 			
 			<div class="mb-2">
 				<input type="text" name="tel" class="form-control" placeholder="전화번호" id="tel">
+			</div>
+			
+			<div class="mb-2">
+				<input type="text" name="homepage" class="form-control" placeholder="홈페이지" id="homepage">
+			</div>
+
+			<div class="mb-2">
+				<input type="file" class="form-control" name="photo">
 			</div>
 
 			<div class="mt-4"></div>
