--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -4,19 +4,21 @@
 <!-- 1, 6, 7, 8, 9 화면 연관-->
 <!-- TODO 로그인전, 후 NavBar 설정 필요  -->
 <div class="d-flex justify-content-center align-items-center">
-	
+
 	<div class="col-auto"></div>
-	
+
 	<div class="col-xxl-7 col-xl-9 col-lg-10 col-md-11 col-sm-12">
 
 
 		<form action="/" method="get">
-		<div class="d-flex justify-content-around ps-4 pe-4" style="height: 295px;">
-			<div class="m-2 border border-info col-4">
-				<h4 class="mt-2 text-center">지역별</h4>
-				<div class="d-flex justify-content-around p-1">
+			<div class="d-flex justify-content-around ps-4 pe-4" style="height: 295px;">
+				<div class="m-2 border border-info col-4">
+					<h4 class="mt-2 text-center">지역별</h4>
+					<div class="d-flex justify-content-around p-1">
 						<div class="flex-wrap overflow-y-scroll border me-2 " style="height: 212px;">
-							<button type="button" class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전국</button>
+							<button type="button"
+							        class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전국
+							</button>
 							<hr class="m-0">
 							<button type="button" class="d-block border-0 bg-white text-start w-100">서울/인천/경기</button>
 							<button type="button" class="d-block border-0 bg-white text-start w-100">부산/울산/경남</button>
@@ -27,7 +29,9 @@
 							<button type="button" class="d-block border-0 bg-white text-start w-100">제주</button>
 						</div>
 						<div class="flex-wrap overflow-y-scroll border " style="height: 212px;">
-							<button type="button" class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전체</button>
+							<button type="button"
+							        class="d-block border-0 bg-white text-start w-100 bg-secondary-subtle">전체
+							</button>
 							<hr class="m-0">
 							<button type="button" class="d-block border-0 bg-white text-start w-100">강서구</button>
 							<button type="button" class="d-block border-0 bg-white text-start w-100">금정구</button>
@@ -46,153 +50,174 @@
 							<button type="button" class="d-block border-0 bg-white text-start w-100">해운대구</button>
 							<button type="button" class="d-block border-0 bg-white text-start w-100">기장군</button>
 						</div>
+					</div>
+
 				</div>
+
+
+				<div class="m-2 border border-info col-4">
+					<h4 class="mt-2 text-center">기술별</h4>
+
+					<div class="form-check d-inline-block ms-3 me-2">
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" id="" name="skillList" value="all"
+							       {{#skillDTO.all}}checked{{/skillDTO.all}}>
+							모두</label>
+					</div>
+					<button class="btn btn-primary" type="submit">검색하기</button>
+
+					<hr class="m-1">
+					<div class="d-flex flex-wrap">
+
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="java"
+								       {{#skillDTO.java}}checked{{/skillDTO.java}}>
+								Java</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="db"
+								       {{#skillDTO.db}}checked{{/skillDTO.db}}>
+								DB</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="htmlCss"
+								       {{#skillDTO.htmlCss}}checked{{/skillDTO.htmlCss}}>
+								HTML/CSS</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="python"
+								       {{#skillDTO.python}}checked{{/skillDTO.python}}>
+								Python</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id=""
+								       value="javaScript" {{#skillDTO.javaScript}}checked{{/skillDTO.javaScript}}>
+								JavaScript</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="git"
+								       {{#skillDTO.git}}checked{{/skillDTO.git}}>
+								Git</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id=""
+								       value="springFramework"
+								       {{#skillDTO.springFramework}}checked{{/skillDTO.springFramework}}>
+								Spring Framework</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" name="skillList" id="" value="C"
+								       {{#skillDTO.C}}checked{{/skillDTO.C}}>
+								C</label>
+						</div>
+
+					</div>
+
+
+				</div>
+
+				<div class="m-2 border border-info col-4">
+					<h4 class="mt-2 text-center">직무별</h4>
+
+					<div class="form-check d-inline-block ms-3 me-2">
+						<label class="form-check-label">
+							<input class="form-check-input" type="radio" id="" name="jobList" value="all"
+							       {{#jobDTO.all}}checked{{/jobDTO.all}}>
+							모두</label>
+					</div>
+					<button class="btn btn-primary" type="submit">검색하기</button>
+
+					<hr class="m-1">
+
+					<div class="d-flex flex-wrap">
+
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="backend"
+								       {{#jobDTO.backend}}checked{{/jobDTO.backend}}>
+								백엔드</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="frontend"
+								       {{#jobDTO.frontend}}checked{{/jobDTO.frontend}}>
+								프런트엔드</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="fullstack"
+								       {{#jobDTO.fullstack}}checked{{/jobDTO.fullstack}}>
+								풀스택</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="android"
+								       {{#jobDTO.android}}checked{{/jobDTO.android}}>
+								안드로이드</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="IOS"
+								       {{#jobDTO.IOS}}checked{{/jobDTO.IOS}}>
+								IOS</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="embedded"
+								       {{#jobDTO.embedded}}checked{{/jobDTO.embedded}}>
+								임베디드</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="bigdata"
+								       {{#jobDTO.bigdata}}checked{{/jobDTO.bigdata}}>
+								빅데이터</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList" value="server"
+								       {{#jobDTO.server}}checked{{/jobDTO.server}}>
+								서버</label>
+						</div>
+						<div class="form-check d-inline-block ms-3 me-2">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="jobList"
+								       value="machinelearning"
+								       {{#jobDTO.machinelearning}}checked{{/jobDTO.machinelearning}}>
+								머신러닝</label>
+						</div>
+
+					</div>
+
+
+				</div>
+
 
 			</div>
-
-
-
-			<div class="m-2 border border-info col-4">
-				<h4 class="mt-2 text-center">기술별</h4>
-
-				<div class="form-check d-inline-block ms-3 me-2">
-					<label class="form-check-label">
-						<input class="form-check-input" type="checkbox" id="" name="skillList" value="all" {{#skillDTO.all}}checked{{/skillDTO.all}}>
-					모두</label>
-				</div>
-				<button class="btn btn-primary" type="submit">검색하기</button>
-				
-				<hr class="m-1">
-				<div class="d-flex flex-wrap">
-					
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="java" {{#skillDTO.java}}checked{{/skillDTO.java}}>
-						Java</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="db" {{#skillDTO.db}}checked{{/skillDTO.db}}>
-						DB</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="htmlCss" {{#skillDTO.htmlCss}}checked{{/skillDTO.htmlCss}}>
-						HTML/CSS</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="python" {{#skillDTO.python}}checked{{/skillDTO.python}}>
-						Python</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="javaScript" {{#skillDTO.javaScript}}checked{{/skillDTO.javaScript}}>
-						JavaScript</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="git" {{#skillDTO.git}}checked{{/skillDTO.git}}>
-						Git</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="springFramework" {{#skillDTO.springFramework}}checked{{/skillDTO.springFramework}}>
-						Spring Framework</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="skillList" id="" value="C" {{#skillDTO.C}}checked{{/skillDTO.C}}>
-						C</label>
-					</div>
-					
-				</div>
-
-				
-			</div>
-
-			<div class="m-2 border border-info col-4">
-				<h4 class="mt-2 text-center">직무별</h4>
-
-				<div class="form-check d-inline-block ms-3 me-2">
-					<label class="form-check-label">
-						<input class="form-check-input" type="radio" id="" name="jobList" value="all" {{#jobDTO.all}}checked{{/jobDTO.all}}>
-					모두</label>
-				</div>
-				<button class="btn btn-primary" type="submit">검색하기</button>
-
-				<hr class="m-1">
-
-				<div class="d-flex flex-wrap">
-
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="backend" {{#jobDTO.backend}}checked{{/jobDTO.backend}}>
-						백엔드</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="frontend" {{#jobDTO.frontend}}checked{{/jobDTO.frontend}}>
-						프런트엔드</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="fullstack" {{#jobDTO.fullstack}}checked{{/jobDTO.fullstack}}>
-						풀스택</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="android" {{#jobDTO.android}}checked{{/jobDTO.android}}>
-						안드로이드</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="IOS" {{#jobDTO.IOS}}checked{{/jobDTO.IOS}}>
-						IOS</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="embedded" {{#jobDTO.embedded}}checked{{/jobDTO.embedded}}>
-						임베디드</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="bigdata" {{#jobDTO.bigdata}}checked{{/jobDTO.bigdata}}>
-						빅데이터</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="server" {{#jobDTO.server}}checked{{/jobDTO.server}}>
-						서버</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="radio" id="" name="jobList" value="machinelearning" {{#jobDTO.machinelearning}}checked{{/jobDTO.machinelearning}}>
-						머신러닝</label>
-					</div>
-
-				</div>
-
-
-			</div>
-
-			
-		</div>
 		</form>
-
-
-
 
 
 		<div class="mb-4 d-flex flex-wrap">
 
 
 			{{#postingList}}
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="border border-info m-2 p-2">
-					<h4 class="text-center fw-bold">{{user.compname}}</h4>
-					{{#user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img src="../../../images/{{user.photo}}" class="img-fluid d-block m-auto" style="height: 120px;">{{/user.photo}}
-					{{^user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img src="../../../images/no_logo.png" class="img-fluid d-block m-auto" style="height: 120px;">{{/user.photo}}
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="border border-info m-2 p-2">
+						<h4 class="text-center fw-bold">{{user.compname}}</h4>
+						{{#user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img
+							src="../../../images/{{user.photo}}" class="img-fluid d-block m-auto"
+							style="height: 120px;">{{/user.photo}}
+						{{^user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img
+							src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
+							style="height: 120px;">{{/user.photo}}
 						<h5 class="mt-1 fw-bold">{{title}}</h5>
 						<div class="mb-1 fst-italic">{{position}}</div>
 						<div class="mb-1">
@@ -204,18 +229,19 @@
 							<span class="badge bg-success">{{region}}</span>
 						</div>
 					</a>
-					<div class="d-flex justify-content-between">
-						<button type="button" class="border-0 bg-white mt-1"><h3>❤️</h3></button>
-						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
-						<span class="fw-bold align-self-center me-2">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
+						<div class="d-flex justify-content-between">
+							<button type="button" class="border-0 bg-white mt-1"><h3>❤️</h3></button>
+							<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+							<span
+								class="fw-bold align-self-center me-2">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
+						</div>
 					</div>
 				</div>
-			</div>
 			{{/postingList}}
 
 
 
-			
+
 		</div>
 	</div>
 
