--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -16,15 +16,29 @@
 	/>
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
-    {{^sessionComp.compname}}<style></style>{{/sessionComp.compname}}
+	{{^sessionComp.compname}}
+		<style></style>{{/sessionComp.compname}}
 
-    {{#sessionComp.compname}}<style>
-      .bg-info{ background-color: silver !important; }
-      .border-info{ border-color: silver !important; }
-      .btn-info{ border-color: silver; background-color: silver !important; }
-      .btn-info:hover { border-color: silver !important; }
-    </style>{{/sessionComp.compname}}
-  </head>
+	{{#sessionComp.compname}}
+		<style>
+			.bg-info {
+				background-color: silver !important;
+			}
+
+			.border-info {
+				border-color: silver !important;
+			}
+
+			.btn-info {
+				border-color: silver;
+				background-color: silver !important;
+			}
+
+			.btn-info:hover {
+				border-color: silver !important;
+			}
+		</style>{{/sessionComp.compname}}
+</head>
 
 <body class="d-flex flex-column min-vh-100">
 	<header>
@@ -40,8 +54,10 @@
 			</div>
 			<div class="col-4 d-flex justify-content-end">
 				<a class="btn btn-white fw-bold" href="/selectJoinForm">회원가입</a>
-				{{^sessionComp.compname}}<a class="btn btn-white fw-bold" href="/user/loginForm">로그인</a>{{/sessionComp.compname}}
-				{{#sessionComp.compname}}<a class="btn btn-white fw-bold" href="/comp/main">내 회사 정보</a>{{/sessionComp.compname}}
+				{{^sessionComp.compname}}
+					<a class="btn btn-white fw-bold" href="/user/loginForm">로그인</a>{{/sessionComp.compname}}
+				{{#sessionComp.compname}}
+					<a class="btn btn-white fw-bold" href="/comp/main">내 회사 정보</a>{{/sessionComp.compname}}
 			</div>
 		</div>
 
@@ -68,13 +84,17 @@
 							<a class="nav-link text-white" href="/">채용정보</a>
 						</li>
 						<li class="nav-item">
-							{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
-							{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/posting/saveForm">채용공고등록</a>{{/sessionComp.compname}}
+							{{^sessionComp.compname}}<a class="nav-link text-white"
+							                            href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
+							{{#sessionComp.compname}}<a class="nav-link text-white"
+							                            href="/comp/posting/saveForm">채용공고등록</a>{{/sessionComp.compname}}
 						</li>
 						<li class="nav-item">
-							{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
-							{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/{{sessionComp.userId}}/postingList">채용공고관리</a>{{/sessionComp.compname}}
-						  </li>
+							{{^sessionComp.compname}}<a class="nav-link text-white"
+							                            href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
+							{{#sessionComp.compname}}<a class="nav-link text-white"
+							                            href="/comp/{{sessionComp.userId}}/postingList">채용공고관리</a>{{/sessionComp.compname}}
+						</li>
 						<li class="nav-item">
 							<a class="nav-link text-white" href="/user/applyList"
 							>지원내역</a
