--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -16,11 +16,13 @@
 
 		<form action="/login" method="post" onsubmit="">
 			<div class="d-flex form-group mt-2 mb-2">
-				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email" value="love@nate.com">
+				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
+				       value="love@nate.com">
 			</div>
 
 			<div class="mb-2">
-				<input type="password" name="password" class="form-control" placeholder="비밀번호" id="password" value="1234">
+				<input type="password" name="password" class="form-control" placeholder="비밀번호" id="password"
+				       value="1234">
 			</div>
 
 			<div class="mt-4"></div>
@@ -55,6 +57,7 @@
 			loginLink.href = "/loginForm";
 		}
 	}
+
 	document.addEventListener("DOMContentLoaded", function () {
 		let loginButton = document.querySelector("#button");
 		loginButton.addEventListener("click", changeLoginLinks);
