--- a/src/main/resources/templates/user/resumeDetailForm.mustache
+++ b/src/main/resources/templates/user/resumeDetailForm.mustache
@@ -97,13 +97,13 @@
         <!-- disabled ="ture"가 생략 된것-->
 
 
-        <div>
+        <!-- <div>
             <input class=" btn btn-primary m-2 mb-3 w-20" type="submit" value="닫기">
             <input class=" btn btn-warning m-2 mb-3 w-20" type="submit" value="수정">
             <input class=" btn btn-danger m-2 mb-3 w-20" type="submit" value="삭제">
 
 
-        </div>
+        </div> -->
     </div>
     <div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
 </div>
