--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -26,8 +26,12 @@
 			<div>
 				<span type="text" class="w-50">{{title}}</span>
 				<a href="/user/resume/{{id}}" class="w-20 btn btn-info">상세보기</a>
-				<button type="button" class="btn btn-primary btn-sm">수정</button>
-				<button type="button" class="btn btn-primary btn-sm">삭제</button>
+				<a href="/user/resumeUpdateForm/{{id}}" class="w-20 btn btn-info">수정</a>
+				<form action="/board/{{resumeId}}/delete" method="post">
+					<button type="submit" class="btn btn-danger">삭제</button>
+				</form>
+
+
 				<hr>
 			</div>
 			{{/resumes}}
