[김지원]스킬테이블 적용

--- a/src/main/resources/templates/comp/detail.mustache
+++ b/src/main/resources/templates/comp/detail.mustache
@@ -56,7 +56,7 @@
 
 			<div class="input-group mb-3 ms-1">
 				<span class="input-group-text">기술</span>
-				<input type="text" class="form-control" value="{{#posting.postingSkill}}{{skill}}, {{/posting.postingSkill}}" disabled>
+				<input type="text" class="form-control" value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
 			</div>
 
 			<div class="input-group mb-3 ms-1">
