--- a/src/main/resources/templates/comp/updateForm.mustache
+++ b/src/main/resources/templates/comp/updateForm.mustache
@@ -123,46 +123,15 @@
 				-->
 				<hr class="m-1">
 				<div class="d-flex flex-wrap">
+
+					{{#skillList}}
 					<div class="form-check d-inline-block ms-3 me-2">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="Java" {{#Java}}checked{{/Java}}>
-						Java</label>
+							<input class="form-check-input" type="checkbox" name="postingSkill" id="" value="{{skillname}}">
+						{{skillname}}</label>
 					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="DB" {{#DB}}checked{{/DB}}>
-						DB</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="HTML/CSS" {{#HTML}}checked{{/HTML}}>
-						HTML/CSS</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="Python" {{#Python}}checked{{/Python}}>
-						Python</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="JavaScript" {{#JavaScript}}checked{{/JavaScript}}>
-						JavaScript</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="Git" {{#Git}}checked{{/Git}}>
-						Git</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="Spring" {{#Spring}}checked{{/Spring}}>
-						Spring Framework</label>
-					</div>
-					<div class="form-check d-inline-block ms-3 me-2">
-						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="" name="postingSkill" value="C" {{#C}}checked{{/C}}>
-						C</label>
-					</div>
+					{{/skillList}}
+					
 				</div>
 			</div>
 
