--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -68,38 +68,12 @@
 				<div class="card input-group ms-2 mb-3">
 					<span class="input-group-text">보유 기술</span>
 					<div class="d-flex flex-wrap">
+					{{#skillList}}
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Java</label>
+							<input class="form-check-input" type="checkbox" id="" value="{{id}}" name="skillList">
+							<label class="form-check-label">{{skillname}}</label>
 						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">DB</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">HTML / CSS</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Python</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">JavaScript</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Git</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Spring Framework</label>
-						</div>
-						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">C</label>
-						</div>
+					{{/skillList}}
 					</div>
 				</div>
 
@@ -109,7 +83,7 @@
 				</div>
 
 
-				<input type="checkbox" name="cb"/> 이력서 공개 여부
+				<input type="checkbox" name="disclosure" value="true"/> 이력서 공개 여부
 				<br/>
 				<!-- disabled속성은 입력할 수 없는 input태그를 만든다 -->
 				<!-- disabled속성은 적용된 input은 서버로 데이터가 전송되지 않는다-->
