코드 Merge 및 더미데이터 정리

--- a/src/main/resources/templates/comp/postingList.mustache
+++ b/src/main/resources/templates/comp/postingList.mustache
@@ -18,7 +18,7 @@
 					<span class="badge bg-black">D-{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
 				</div>
 				<div class="mb-1">
-					{{#postingSkill}}<span class="badge bg-primary me-1">{{skill}}</span>{{/postingSkill}}
+					{{#postingSkill}}<span class="badge bg-primary me-1">{{skill.skillname}}</span>{{/postingSkill}}
 				</div>
 				<div>
 					{{#career}}<span class="badge bg-success">{{career}}</span>{{/career}}
