--- a/src/main/resources/templates/comp/detail.mustache
+++ b/src/main/resources/templates/comp/detail.mustache
@@ -54,8 +54,8 @@
 
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">기술</span>
-		<input type="text" class="form-control" value="{{#posting.postingSkill}}{{skill}}, {{/posting.postingSkill}}"
-		       disabled>
+		<input type="text" class="form-control"
+		       value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
 	</div>
 
 	<div class="input-group mb-3 ms-1">
